--- a/site_ViveBio/public/css/productAll.css
+++ b/site_ViveBio/public/css/productAll.css
@@ -1,52 +1,177 @@
-.productAll .row {
-    width: 100%;
+/*MOBILE*/
+.productAll .producto {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    padding: 30px;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+
+/*NOMBRE PRODUCTO*/
+.productAll .producto__texto h1 {
+    font-size: 16px;
+    color: var(--azulSuave);
+    text-align: center;
     text-shadow: none;
 }
 
-.productAll .títulos {
-    text-align: center;
-    color: white;
-    background-color: var(--verdeOscuro);
-    margin: 30px 0;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 32px;
+
+/*BOX TEXTO*/
+.productAll .producto__texto {
+    line-height: 25px;
+    text-align: justify;
+    border-radius: 5px;
+    width: 90%;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgb(161, 206, 152);
+    padding: 20px 10px;
+    border: 1px solid green;
 }
 
+/*TEXTO*/
+.productAll .producto__texto p {
+    color: var(--VioletaOscuro);
+    padding: 20px 10px;
+    background-color: var(--aquamarineSuave);
+    box-shadow: 1px 1px 5px var(--grisSuave);
+    border-radius: 5px;
+    text-shadow: none;
+}
+
+
+/*BOX IMAGEN*/
+.productAll .producto__imagen {
+    background-color: var(--verdeClaro);
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgb(161, 206, 152);
+    padding: 20px;
+    border: 1px solid green;
+    margin-top: 10px;
+}
+
+.productAll .producto__imagen h2 {
+    font-size: 20px;
+    padding: 10px;
+}
+
+.productAll .box-info .rating {
+    font-size: 25px;
+}
+
+.productAll .box-imagen img {
+    width: 100%;
+    border-radius: 50%;
+}
+
+/*BOX TEXTO*/
+.productAll .box-info {
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
+    flex-direction: column;
+}
+
+/* ÍCONOS */
+.productAll .producto__cart {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.productAll .producto__cart button {
+    font-size: 33px;
+    background-color: var(--azulSuave);
+    color: white;
+    border-radius: 25px;
+    padding: 8px;
+}
+
+.productAll .button {
+    display: flex;
+    flex-direction: column;
+}
+
+.productAll .producto__cart a {
+    text-decoration: none;
+    color: white;
+    background-color: var(--azulSuave);
+    border-radius: 50%;
+    font-size: 80px;
+    padding: 20px;
+}
+
+.productAll .producto__cart a:hover {
+    color: var(--azulSuave);
+    background-color: white;
+    border: 1px solid var(--azul);
+}
+
+
+/* PRODUCTOS RELACIONADOS */
+.productAll .row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.productAll .productosRelacionados {
+    color: white;
+    background-color: var(--verdeOscuro);
+    text-align: center;
+    margin-bottom: 10px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.productAll .card.estilo-c {
+    width: 300px;
+    margin-bottom: 40px;
+}
+
+
+.productAll .estilo-c .img-container .promo {
+    position: absolute;
+    background: var(--aquamarine);
+    top: 10px;
+    left: 0;
+    font-size: 20px;
+    padding: 15px;
+    border-bottom-right-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.productAll .estilo-c .info-container {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: var(--green-background-cards);
+    height: 170px;
+    padding-left: 10px;
+    padding-top: 5px;
+}
 
 .productAll .card {
     width: 33%;
 }
 
-.productAll .estilo-c {
-    margin-right: 5px;
-    
-}
-
-.productAll .estilo-c:last-child {
-    margin-right: 0px;
-}
-
-.productAll .estilo-c a {
-    text-decoration: none;
-    color: var(--VioletaOscuro);
-}
-
-.productAll .estilo-c a:hover {
-    text-decoration: underline white;
-    color: var(--verdeOscuro);
-}
 
 .productAll .estilo-c .img-container {
     overflow: hidden;
     height: 300px;
     position: relative;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .productAll .estilo-c .img-container img {
@@ -60,203 +185,133 @@
     transform: scale(1.2);
 }
 
-
-.productAll .estilo-c .img-container .promo {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    font-size: 20px;
-    background: var(--aquamarine);
-    padding: 15px;
-    color: var(--VioletaOscuro);
-    border-bottom-right-radius: 25px;
-    border-top-right-radius: 25px;
-}
-
-.productAll .estilo-c .info-container {
-    background-color: var(--verdeClaro);
-    height: 180px;
-    border-radius: 5px;
-    padding-left: 10px;
-    padding-top: 5px;
-}
-
-
+/*NOMBRE PRODUCTO*/
 .productAll .estilo-c .info-container h2 {
-    font-size: 22px;
+    font-size: 24px;
+    text-shadow: none;
+    color: var(--azulSuave);
+}
+
+/*CATEGORÍA PRODUCTO*/
+.productAll .estilo-c .info-container h4 {
+    font-size: 14px;
+    text-shadow: none;
     color: var(--VioletaOscuro);
 }
 
-.productAll .estilo-c .info-container h4 {
+/*PROPIEDAD PRODUCTO*/
+.productAll .estilo-c .info-container span {
     font-size: 18px;
-    color: var(--VioletaOscuro);
 }
 
 .productAll .estilo-c .info-container h3 {
-    color: var(--verdeAmarillento)
+    font-size: 24px;
 }
 
-
 .productAll .estilo-c .add-cart {
+    font-size: 15px;
     margin-top: 2px;
     text-decoration: none;
-    color: var(--VioletaOscuro);
-    background-color: var(--aquamarine);
+    color: white;
+    background-color: var(--azulSuave);
     padding: 10px;
     border: 1px solid white;
     border-radius: 25px;
-    font-size: 14px;
+}
+
+.productAll .card-c-iconos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.productAll .card-c-iconos .buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+.productAll .buttons button {
+    background-color: var(--azulSuave);
+    color: white;
+    border-radius: 30%;
+}
+
+.productAll .titulares {
+    text-align: center;
+    color: white;
+    background-color: var(--verdeOscuro);
+    margin: 30px 0;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
 }
 
 .productAll .estilo-c .add-cart:hover {
     color: var(--azulSuave);
-    background-color: var(--verdeAmarillento);
-    border: 1px solid var(--azul);
+    background-color: white;
+    border: 1px solid var(--azulSuave);
 }
 
-.productAll .banner img {
+.productAll .banner img{
     width: 100%;
-    transform: scale(1);
-    display: block;
+    margin-bottom: -5px;
+}
+
+@media(min-width: 460px) {
+     
+    .productAll .row {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .productAll .card.estilo-c {
+        width: 83%;
+    }
+
+    /*NOMBRE PRODUCTO*/
+    .productAll .estilo-c .info-container h2 {
+        font-size: 26px;
+    }
+
+    /*CATEGORÍA PRODUCTO*/
+    .productAll .estilo-c .info-container h4 {
+        font-size: 16px;
+    }
+
+    /*PROPIEDAD PRODUCTO*/
+    .productAll .estilo-c .info-container h3 {
+        font-size: 22px;
+    }
+
+    .productAll .estilo-c .add-cart {
+        padding: 5px;
+        border-radius: 15px;
+        font-size: 15px;
+    }
+
+    .productAll .estilo-c:hover {
+        box-shadow: 0 0 8px black;
+        
+    }
 }
 
 
-@media(max-width: 960px){
+@media (min-width: 660px) {
+    .productAll .card.estilo-c {
+        width: 295px;
+    }
 
-.productAll .row {
-    flex-wrap: wrap;
-    justify-content: space-between;
-    justify-content: center;
-    align-items: center;
-}
+@media (min-width: 960px) {
+    .productAll .productosRelacionados {
+        margin-bottom: 30px;
+        height: 60px;
+        display: flex;
+        flex-direction: row;
+    }
 
-.productAll .títulos {
-    margin-bottom: 10px;
-    height: 100px;
-}
-
-
-.productAll .card.estilo-c {
-    width: 300px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 40px;
-}
-
-.productAll .estilo-c .img-container .promo {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    font-size: 20px;
-    padding: 15px;
-    border-bottom-right-radius: 25px;
-    border-top-right-radius: 25px;
-}
-
-.productAll .estilo-c .info-container {
-    height: 140px;
-    border-radius: 5px;
-    padding-left: 10px;
-
-}
-
-
-.productAll .estilo-c .info-container h2 {
-    font-size: 16px;
-
-}
-
-.productAll .estilo-c .info-container h4 {
-    font-size: 12px;
-
-}
-
-.productAll .estilo-c .info-container h3 {
-    font-size: 24px;
-}
-
-
-
-
-.productAll .estilo-c .add-cart {
-    padding: 5px;
-    border: 1px solid white;
-    border-radius: 15px;
-    font-size: 15px;
-}
-
-}
-
-@media (max-width: 460px) {
-
-.productAll .row {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 30px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.productAll .títulos {
-    font-size: 24px;
-    height: 60px;
-}
-
-
-.productAll .card.estilo-c {
-    width: 300px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 40px;
-}
-
-.productAll .estilo-c .img-container .promo {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    font-size: 20px;
-    padding: 15px;
-    border-bottom-right-radius: 25px;
-    border-top-right-radius: 25px;
-}
-
-.productAll .estilo-c .info-container {
-    height: 140px;
-    border-radius: 5px;
-    padding-left: 10px;
-
-}
-
-
-.productAll .estilo-c .info-container h2 {
-    font-size: 16px;
-
-}
-
-.productAll .estilo-c .info-container h4 {
-    font-size: 12px;
-
-}
-
-.productAll .estilo-c .info-container h3 {
-    font-size: 24px;
-}
-
-
-
-.productAll .estilo-c .add-cart {
-    padding: 5px;
-    border: 1px solid white;
-    border-radius: 15px;
-    font-size: 15px;
-}
-
-
-
+    .productAll .iconos-eco {
+        width: 97%;
+    }
 }
