--- a/site_ViveBio/src/views/products/productAll.ejs
+++ b/site_ViveBio/src/views/products/productAll.ejs
@@ -9,7 +9,7 @@
         <h2 class="titulares">Productos Recomendados</h2>
         <section class="row">
             <div class="card estilo-c">
-                <a href="./productCard.html">
+                <a href="./products/Card">
                     <div class="img-container">
                         <img src="/images/jabon_humectante_2.jpg" alt="producto">
                         <span class="promo">10% off</span>
@@ -22,7 +22,7 @@
                 </a>
                 <div class="card-c-iconos">
                     <span class="rating">⭐⭐⭐⭐</span>
-                    <a href="./productCarrito.html" class="add-cart">Quiero! 🛒</a>
+                    <a href="./productsCarrito.html" class="add-cart">Quiero! 🛒</a>
                     <div class="buttons">
                         <button><i class="fa-solid fa-share-nodes"></i></button>
                         <button><i class="fa-solid fa-star"></i></button>
@@ -30,7 +30,7 @@
                 </div>
             </div>
             </div>
-            <div class="card estilo-c">
+            <div class="/products/card">
                 <a href="./productCard.html">
                     <div class="img-container">
                         <img src="/images/jabonExfo_luffa.jpg" alt="producto">
