agrego producto en index

--- a/site_ViveBio/public/css/productAll.css
+++ b/site_ViveBio/public/css/productAll.css
@@ -302,6 +302,7 @@
     .productAll .card.estilo-c {
         width: 295px;
     }
+}
 
 @media (min-width: 960px) {
     .productAll .productosRelacionados {
