--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -32,6 +32,21 @@
             </article>
             <article class="art__home">
                 <div class="nombreart__home">
+                    <h1>producto 1</h1>
+                </div>
+                <div class="imgart__home">
+                    <img src="/images/producto3.jpeg" alt="">
+                </div>
+                <div class="precio">
+                    <h4>$600</h4>
+                    <p>$300</p>
+                </div>
+                <div class="verart__home">
+                    <a href="/productCard">Ver mas</a>
+                </div>
+            </article>
+            <article class="art__home">
+                <div class="nombreart__home">
                     <h1>producto 2</h1>
                 </div>
                 <div class="imgart__home">
