--- a/site_ViveBio/src/views/products/productCard.ejs
+++ b/site_ViveBio/src/views/products/productCard.ejs
@@ -11,7 +11,7 @@
         <h1>🔥LUFFA + JABÓN EXFOLIANTE DE NARANJA Y CAFÉ🔥</h1>
         <div class="producto__imagen">
           <div class="box-imagen">
-            <img src="/images/jabonexfo_luffa2.jpg" alt="producto-combo">
+            <img src="/images/JabonLuffa-11.jpg" alt="producto-combo">
           </div>
           <div class="box-info">
             <h2>$ 300.-</h2>
@@ -45,7 +45,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/images/jabon_humectante_2.jpg" alt="producto">
+            <img src="/images/jabon-humectante-14.jpg" alt="producto">
             <span class="promo">10% off</span>
           </div>
           <div class="info-container">
@@ -70,7 +70,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/images/jabonExfo_luffa.jpg" alt="producto">
+            <img src="/images/jabones2.jpg" alt="producto">
             <span class="promo">25% off</span>
           </div>
           <div class="info-container">
@@ -95,7 +95,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
+            <img src="/imagenes/JabonLuffa-09.jpg" alt="producto">
             <span class="promo">15% off</span>
           </div>
           <div class="info-container">
@@ -120,7 +120,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
+            <img src="/imagenes/JabonLuffa-09.jpg" alt="producto">
             <span class="promo">15% off</span>
           </div>
           <div class="info-container">
@@ -145,7 +145,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
+            <img src="/imagenes/JabonLuffa-09.jpg" alt="producto">
             <span class="promo">15% off</span>
           </div>
           <div class="info-container">
@@ -170,7 +170,7 @@
       <div class="card estilo-c">
         <a href="/products/Card">
           <div class="img-container">
-            <img src="/images/jaboncito_exfoliantes.jpg" alt="producto">
+            <img src="/imagenes/JabonLuffa-09.jpg" alt="producto">
             <span class="promo">15% off</span>
           </div>
           <div class="info-container">
