--- a/site_ViveBio/public/css/variables.css
+++ b/site_ViveBio/public/css/variables.css
@@ -22,4 +22,5 @@
     --aquamarineSuave: #E7F9EE;
     --grisSuave: #6a6060;
     --celesteSuave: #d9ebf7;
+    --green-background-cards: #cbd9dd;
 }
